--- a/index.html
+++ b/index.html
@@ -12,6 +12,30 @@
         <h3>Product Designer/Dev</h3>
         <h4>Ububa Technologies</h4>
         <hr>
+        <marquee style="color: white; background-color: #08aa08;"  behavior="scroll" direction="right"> 
+           <div class="mar_contain" style="display: flex; justify-content:space-between;">
+                <div class="mar" style="padding-block: 16px ; display: flex; gap: 8px;" >
+                    <img src="leaf_icon.svg" alt="leaf">
+                    <h3 style=" margin: 0%;">Green Technology</h3> 
+                </div> 
+
+                <div class="mar" style="padding-block: 16px ; display: flex; gap: 8px;" >
+                    <img src="brightness_icon.svg" alt="Bright">
+                    <h3 style=" margin: 0%;">Sunpower Solution</h3> 
+                </div> 
+
+                <div class="mar" style="padding-block: 16px ; display: flex; gap: 8px;" >
+                    <img src="solar_icon.svg" alt="solar">
+                    <h3 style=" margin: 0%;">Solar Sage Initiative</h3> 
+                </div> 
+
+                <div class="mar" style="padding-block: 16px ; display: flex; gap: 8px;" >
+                    <img src="brightness_icon.svg" alt="Bright">
+                    <h3 style=" margin: 0%;">This Is A Test</h3> 
+                </div>   
+           </div>
+        </marquee>
+
         <h5>Silicon Valley</h5>
         <h6>UI/UX Design</h6>
         <p>Welcome to Elanhub! I just built my first website.</p>
